# pact-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUBMISSION.md  audit_test.py  cli.py  generate_report.py  list_models.py  parse_res.txt  pyproject.toml  qa_report.json  raw_out.txt  re_ai.py  rename.py  requirements.txt  run_demo.py  test_ai.py  web_app.py
.github/workflows/: configure-live-demo.yml  documentation.yml  live-analysis.yml  nightly-quality.yml  pact-guard.yml  pact-sentinel.yml  pre-release.yml  regression.yml  repo-setup.yml  security-agent.yml  sentinel-devops.yml  set-secrets.yml  versioning.yml
docs/: index.html
examples/: vulnerable.pact
src/: __init__.py
src/agents/: devops_agent.py  issue_tracker.py  qa_tester.py
src/ai/: claude_analyzer.py  gemini_analyzer.py
src/core/: analyzer.py
src/output/: reporter.py  risk_score.py
src/parser/: ast_nodes.py  pact_parser.py
src/rules/: rule_engine.py
tests/: conftest.py  test_guard.py  test_sentinel.py
tests/contracts/: safe-token.pact  vulnerable-defi.pact
tests/contracts/edge_cases/: edge-cases.pact  engine-limits.pact
vscode-extension/: package.json
vscode-extension/src/: extension.ts
web/: index.html
